--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -13,6 +13,9 @@
 		<title><%= title %></title>
 	</head>
 	<body>
+		<% if(created) {%>
+		<div class="alert alert-success">Note has been created</div>
+		<% } %>
 		<div class="container">
 			<h1><%= title %></h1>
 		</div>
@@ -24,17 +27,23 @@
 			<button class="btn btn-primary" type="submit">create</button>
 		</form>
 
+		<% if(notes.length) { %>
 		<div class="card">
 			<ul class="list-group">
 				<% for(let i = 0; i < notes.length; i++) { %>
-				<li class="list-group-item"><%= notes[i].title %></li>
+				<li class="list-group-item d-flex justify-content-between align-items-center">
+					<%= notes[i].title %>
+					<button class="btn btn-danger" data-type="remove" data-id="<%= notes[i].id %>">
+						&times;
+					</button>
+				</li>
+
 				<% } %>
 			</ul>
 		</div>
+		<% } else { %>
+		<p>No notes!</p>
+		<% } %>
 	</body>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-		crossorigin="anonymous"
-	></script>
+	<script src="/app.js"></script>
 </html>
