--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -11,6 +11,23 @@
 			crossorigin="anonymous"
 		/>
 		<title><%= title %></title>
+		<style>
+			.edit .btn-startEdit,
+			.edit .btn-remove,
+			.edit .titleText {
+				display: none;
+			}
+			.inputTitleText,
+			.btn-commitEdit,
+			.btn-cancelEdit {
+				display: none;
+			}
+			.edit .inputTitleText,
+			.edit .btn-commitEdit,
+			.edit .btn-cancelEdit {
+				display: block;
+			}
+		</style>
 	</head>
 	<body>
 		<% if(created) {%>
@@ -31,14 +48,24 @@
 		<div class="card">
 			<ul class="list-group">
 				<% for(let i = 0; i < notes.length; i++) { %>
-				<li class="list-group-item d-flex justify-content-between align-items-center">
-					<%= notes[i].title %>
-					<div>
-						<button class="btn btn-primary" data-type="edit" data-id="<%= notes[i].id %>">
-							edit
+				<li
+					class="list-group-item d-flex justify-content-between align-items-center"
+					data-id="<%= notes[i].id %>"
+				>
+					<span class="titleText"><%= notes[i].title %></span>
+					<input class="inputTitleText" type="text" value="<%= notes[i].title %>" />
+					<div class="buttons-container d-flex gap-1">
+						<button class="btn btn-success btn-commitEdit" data-type="commitEdit">
+							Save
+						</button>
+						<button class="btn btn-danger btn-cancelEdit" data-type="cancelEdit">
+							Cancel
+						</button>
+						<button class="btn btn-primary btn-startEdit" data-type="editStart">
+							Edit
 						</button>
 						<button
-							class="btn btn-danger"
+							class="btn btn-danger btn-remove"
 							data-type="remove"
 							data-id="<%= notes[i].id %>"
 						>
